# jupyterlab-blockly-ipylgbst

./: .gitignore  .prettierignore  CHANGELOG.md  LICENSE  README.md  RELEASE.md  install.json  package.json  pyproject.toml  tsconfig.json  webpack.config.js
.github/workflows/: binder-on-pr.yml  build.yml  check-release.yml
binder/: environment.yml  postBuild
examples/: demo.jpblockly
jupyterlab_blockly_ipylgbst/: __init__.py
patches/: @jupyterlab+codeeditor+3.6.3.patch
src/: index.ts  ipylgbst_blocks_and_toolbox.js
